[package]
name = "video-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart="0.5"
futures-util = "0.3"
derive_more = "0.99.0"
mime = "0.3.16"
actix-files = "0.6.2"
mongodb = "2.3.1"
serde = "1.0.152"
bson = "2.5.0"
env_logger = "0.10.0"
futures = "0.3.26"
